...
    ar: 'الألمانية',
    th: 'ภาษาเยอรมัน',
    es: 'Alemán',
    fr: 'Allemand',
  },
  en_US: {
    'zh-Hans': '英语',
    en: 'English',
    ja: '英語',
    ru: 'Английский',
    kk: 'Ағылшын тілі',
    ko: '영어',
    ar: 'الإنجليزية',
...
