appId: "${APP_PACKAGE}"
name: Profile - logout and email login
tags:
  - profile
  - login
  - android
---
- launchApp:
    clearState: false
    stopApp: false
    optional: true
- runFlow:
    when:
      visible: "申请蓝牙权限"
    commands:
      - tapOn: "取消"
      - waitForAnimationToEnd:
          timeout: 1000
      - pressKey: Back
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "编辑设备名称"
    commands:
      - tapOn: "取消"
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "确认删除"
    commands:
      - tapOn: "取消"
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "说明与教程"
    commands:
      - pressKey: Back
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "本协议.*"
    commands:
      - pressKey: Back
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "更新智能体"
    commands:
      - hideKeyboard
      - pressKey: Back
      - waitForAnimationToEnd:
          timeout: 1000
- runFlow:
    when:
      visible: "创建智能体"
    commands:
      - hideKeyboard
      - pressKey: Back
      - waitForAnimationToEnd:
          timeout: 1000
- tapOn:
    point: "84%,94%"
- runFlow:
    when:
      visible: "${TEST_USER_NAME}|设备管理|用户协议|说明与教程|退出登录"
    commands:
      - extendedWaitUntil:
          visible: "${TEST_USER_NAME}|设备管理|用户协议|说明与教程|退出登录"
          timeout: 5000
      - scroll
      - scroll
      - waitForAnimationToEnd:
          timeout: 1000
      - tapOn:
          point: "50%,73%"
      - extendedWaitUntil:
          visible: "确定要退出登录吗？"
          timeout: 10000
      - tapOn: "确认"
- extendedWaitUntil:
    visible: "账号密码登录"
    timeout: 15000
- tapOn: "账号密码登录"
- extendedWaitUntil:
    visible: "账号名"
    timeout: 5000
- tapOn:
    point: "50%,44%"
- runFlow:
    when:
      visible: "中文|拼音|中/英"
    commands:
      - tapOn:
          point: "8%,95%"
      - waitForAnimationToEnd:
          timeout: 500
- eraseText
- inputText: "${TEST_EMAIL}"
- tapOn:
    point: "50%,55%"
- runFlow:
    when:
      visible: "中文|拼音|中/英"
    commands:
      - tapOn:
          point: "8%,95%"
      - waitForAnimationToEnd:
          timeout: 500
- eraseText
- inputText: "${TEST_PASSWORD}"
- hideKeyboard
- tapOn: "登录"
- extendedWaitUntil:
    visible: "设备|智能体|广场|我的|暂无设备"
    timeout: 20000
- assertVisible: "设备|智能体|广场|我的"
